# hackathon2-phase1

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json  skills.md
.claude/agents/: functional-spec-author.md  implementation-agent.md  orchestrator.md  planning-agent.md  task-decomposer.md
.specify/memory/: constitution.md
history/prompts/001-advanced-features/: 001-advanced-features-implementation.completed.prompt.md  001-create-advanced-features-spec.spec.prompt.md  002-create-implementation-plan.plan.prompt.md  003-update-spec-add-interactive-cli.spec.prompt.md  004-generate-implementation-tasks.tasks.prompt.md
history/prompts/001-todo-cli-app/: 001-create-todo-cli-spec.spec.prompt.md  002-create-todo-cli-plan.plan.prompt.md  003-create-todo-cli-tasks.tasks.prompt.md  004-implement-todo-cli.implementation.prompt.md  005-task-persistence-spec.spec.prompt.md  006-task-persistence-plan.plan.prompt.md  007-task-persistence-tasks.tasks.prompt.md  008-implement-task-persistence.implementation.prompt.md  009-commit-task-persistence-pr.misc.prompt.md  (+1 more)
specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/003-task-persistence/: data-model.md  plan.md  spec.md  tasks.md
src/: __init__.py
src/cli/: __init__.py  commands.py  formatters.py  menu.py  prompts.py  validation.py
src/models/: recurrence.py  reminder.py  task.py
src/services/: recurrence_service.py  reminder_service.py
src/storage/: task_store.py
tests/: __init__.py
tests/unit/: test_task.py  test_task_store.py
(+30 files in other folders)
